<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
  
    <Button
      android:id="@+id/donate_button_xxl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/donate_xxl" />
    
    <Button
      android:id="@+id/donate_button_xl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/donate_xl" />
    
    <Button
      android:id="@+id/donate_button_l"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/donate_l" />
    
    <Button
      android:id="@+id/donate_button_m"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/donate_m" />
    
    <Button
      android:id="@+id/donate_button_s"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/donate_s" />

</LinearLayout>